@@ -40,54 +40,17 @@
 require_once dirname(__FILE__).'/FirePHP.class.php';
 
 /**
- * Sends the given data to FirePHP Firefox Extension.
+ * Sends the given data to the FirePHP Firefox Extension.
  * The data can be displayed in the Firebug Console or in the
  * "Server" request tab.
  * 
- * Usage:
- * 
- * require('fb.php')
- * 
- * // NOTE: You must have Output Buffering enabled via
- * //       ob_start() or output_buffering ini directive.
- * 
- * fb('Hello World'); // Defaults to FirePHP::LOG
- * 
- * fb('Log message'  ,FirePHP::LOG);
- * fb('Info message' ,FirePHP::INFO);
- * fb('Warn message' ,FirePHP::WARN);
- * fb('Error message',FirePHP::ERROR);
- * 
- * fb('Message with label','Label',FirePHP::LOG);
- * 
- * fb(array('key1'=>'val1',
- *          'key2'=>array(array('v1','v2'),'v3')),
- *    'TestArray',FB_LOG);
- * 
- * function test($Arg1) {
- *   throw new Exception('Test Exception');
- * }
- * try {
- *   test(array('Hello'=>'World'));
- * } catch(Exception $e) {
- *   fb($e);
- * }
- * 
- * fb(array('2 SQL queries took 0.06 seconds',array(
- *    array('SQL Statement','Time','Result'),
- *    array('SELECT * FROM Foo','0.02',array('row1','row2')),
- *    array('SELECT * FROM Bar','0.04',array('row1','row2'))
- *   )),FirePHP::TABLE);
- * 
- * // Will show only in "Server" tab for the request
- * fb(apache_request_headers(),'RequestHeaders',FirePHP::DUMP);
- * 
- * 
- * @return Boolean  True if FirePHP was detected and headers were written, false otherwise
+ * For more informtion see: http://www.firephp.org/
  * 
  * @copyright   Copyright (C) 2007-2008 Christoph Dorn
  * @author      Christoph Dorn <christoph@christophdorn.com>
  * @license     http://www.opensource.org/licenses/bsd-license.php
+ * 
+ * @return Boolean  True if FirePHP was detected and headers were written, false otherwise
  */
 function fb() {
 
